fixed messages hidden under element

--- a/src/MessagesPage/MessagesPage.css
+++ b/src/MessagesPage/MessagesPage.css
@@ -1,7 +1,7 @@
 .messages-page-postlist-div {
   display: flex;
   flex-direction: column;
-  margin-bottom: -30px;
+  margin-bottom: 100px;
 }
 
 .messages-page-message-div {
@@ -82,6 +82,10 @@
 }
 
 @media (min-width: 868px) {
+  .messages-page-postlist-div {
+    margin-bottom: 50px;
+  }
+
   .messages-page-message-div {
     width: 700px;
     border-bottom: 2px solid #38444d;
